--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </div>
       <div class="row separated border-all-1 border-color-dark-gray no-gutters">
-        <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
+       <!-- <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href=""><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"> <i class="fab fa-sass"></i> </div>
             <h5 class="m-0px theme-color-alt">SOFTWARE AS SERVICE</h5>
@@ -149,7 +149,7 @@
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-cloud-meatball"></i></div>
             <h5 class="m-0px theme-color-alt">PLATFORM AS SERVICE</h5>
           </div></a>
-        </div>
+        </div>-->
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="cloud-vps-windows.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-link"></i></div>
@@ -161,7 +161,7 @@
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"> <i class="fas fa-shield-alt"></i> </div>
             <h5 class="m-0px theme-color-alt">CYBER SECURITY</h5>
           </div></a>
-        </div>
+        </div><!--
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="#"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"> <i class="fas fa-network-wired"></i> </div>
@@ -185,7 +185,7 @@
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-gamepad"></i></div>
             <h5 class="m-0px theme-color-alt">GAMES HOSTING</h5>
           </div></a>
-        </div>
+        </div>-->
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="email-hosting.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-envelope"></i></div>
@@ -197,13 +197,13 @@
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-hdd"></i> </div>
             <h5 class="m-0px theme-color-alt">VPS</h5>
           </div></a>
-        </div>
+        </div><!--
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="#"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-boxes"></i> </div>
             <h5 class="m-0px theme-color-alt">BACKUP</h5>
           </div></a>
-        </div>
+        </div>-->
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="saudi-domain-registration.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-globe-europe"></i></div>
@@ -229,9 +229,9 @@
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="shared-hosting.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-warehouse"></i></div>
-            <h5 class="m-0px theme-color-alt">BIG STORAGE</h5>
+            <h5 class="m-0px theme-color-alt">Saudi Arabia Shared Hosting</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
@@ -315,6 +315,29 @@
           <div class="price-table-02 hover-top box-shadow-hover card">
             <div class="pt-head d-flex align-items-center justify-content-between">
               <div class="pth-left">
+                <h4>Dedicated Server</h4>
+                <span>Big Solution</span> </div>
+              <div class="pth-right">
+                <h5 class="theme-color"><span>SAR</span>1120</h5>
+                <label>Per Month</label>
+              </div>
+            </div>
+            <div class="pt-body">
+              <ul class="list-type-01 theme">
+                <li><i class="fas fa-check"></i> Core i7 6700. 8CPUs</li>
+                <li><i class="fas fa-check"></i> Mem 16GB DDR4 RAM</li>
+                <li><i class="fas fa-check"></i> HDD 1TB SATA HDD</li>
+                <li><i class="fas fa-check"></i> BW 5 TBs (100Mbps)</li>
+
+              </ul>
+            </div>
+            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/saudi-arabia-dedicated-servers/core-i7-6700">Buy Now</a> </div>
+          </div>
+        </div><!--
+        <div class="col-lg-4 m-15px-tb">
+          <div class="price-table-02 hover-top box-shadow-hover card">
+            <div class="pt-head d-flex align-items-center justify-content-between">
+              <div class="pth-left">
                 <h4>Dedicated Server </h4>
                 <span>Big Solution</span> </div>
               <div class="pth-right">
@@ -333,7 +356,7 @@
             </div>
             <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="#">Get Started</a> </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
   </section>
