--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Dadicated Servers</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
+                <li><a href="colocation.html">Colocation</a></li>
                 <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
                 <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
               </ul>
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
+                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud</a></li>
                 <li><a href="cloud-vps-linux.html">Offshore Cloud VPS Linux Hosting</a></li>
                 <li><a href="cloud-vps-windows.html">Offshore Cloud VPS Windows hosting</a></li>
-                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
 
               </ul>
             </li>
@@ -57,7 +58,6 @@
               <ul class="px-dropdown-menu mm-dorp-in">
                 <li><a href="ssl.html">SSL</a></li>
                 <li><a href="search-engine-optimisation.html">SEO</a></li>
-                <li><a href="colocation.html">Colocation</a></li>
                 <li><a href="cyber-security.html">Cyber Secuirty</a></li>
                 <li><a href="server-management.html">Server Management & Monitoring</a></li>
               </ul>
@@ -67,7 +67,7 @@
                 <li><a href="Microsoft-Office-365.html">Microsoft Office 365
                 </a></li>
                 <li><a href="Google-Workspace.html">Google Workspace</a></li>
-                <li><a href="email-hosting.html">Email Hosting</a></li>
+                <li><a href="email-hosting.html">Exchange Email</a></li>
               </ul>
             </li>
           
@@ -590,7 +590,7 @@
             <h5 class="m-20px-b"> Connect with Prohost</h5>
             <p class="font-small m-0px"><b>Sales: </b>sales@prohost.sa</p><br>
             <p class="font-small m-0px"><b>Support: </b>support@prohost.sa</p> <br>
-            <p class="font-small m-0px"><b>Mobile: </b>+966550243031</p><br>
+            <p class="font-small m-0px"><b>Mobile: </b>+966500211272</p><br>
             <p class="font-small m-0px"><b>Phone: </b>8002472030</p>
           </div>
           
@@ -634,7 +634,7 @@
           <p class="m-0px font-small">© 2023 copyright all right reserved || ProHost.Sa</p>
         </div>
         <div class="col-md-6 text-center text-md-right m-5px-tb">
-          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a><a href="https://api.whatsapp.com/send/?phone=966550243031"><i class="fab fa-whatsapp"></i></a> </div>
+          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a><a href="https://api.whatsapp.com/send/?phone=966500211272"><i class="fab fa-whatsapp"></i></a> </div>
         </div>
       </div>
     </div>
